--- a/src/main/webapp/static/html/test.html
+++ b/src/main/webapp/static/html/test.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 	<h3><a href="http://127.0.0.1:8080">demo工程首页</a></h3>
-
+	
+	<ul>
+		<li><a href="./valid/JS类型判断.html">JS 类型判断</a></li>
+	</ul>
+	
 	<div>
 		<form action="">
 			<span>测试数据</span><br>
@@ -26,15 +30,8 @@
 		d = new Date('2017-12-12');
 		//console.info(getWeekName(d));
 		//console.info(isLeapYear('2012'));
-		console.info(isUndef(2012));
+		//console.info(isUndef(2012));
 	})
-	
-	function isDef(v) {alert("1");
-	return !isUndef(v);
-}
-function isUndef(v) {alert("2");
-	return typeof v === "undefined";
-}
 	</script>
 </body>
 </html>
